fix column header alignment

--- a/release-planning-summary/src/style/app.css
+++ b/release-planning-summary/src/style/app.css
@@ -15,3 +15,7 @@
     margin-right: 5px;
     cursor: pointer;
 }
+
+.x-column-header-align-right .x-column-header-text {
+    margin-right: 0px;
+}
